# outCreator

./: CMakeLists.txt  Config.cmake.in  README.md
.github/workflows/: build-test-install.yml
include/: outcreator.hpp
src/: outcreator.cpp
